--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,21 @@ services:
     environment:
       POSTGRES_DB: blog_development
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: admin
 
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails server -b 0.0.0.0"
     volumes:
       - .:/app
+    working_dir: /app
     ports:
       - "3000:3000"
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/blog_development
+      DATABASE_URL: postgres://postgres:admin@db:5432/blog_development
+      RAILS_ENV: development
 
 volumes:
   pgdata:
